2005-06-23 Duncan Coutts <duncan@coutts.uklinux.net>

	* docs/tutorial/Makefile: change the base url to point ot the 0.9.8
	docs.

2005-06-22 Duncan Coutts <duncan@coutts.uklinux.net>

	* Makefile.am: some minor fixes suggested by the debian packaging
	people. Clean the generated .hs files for the parse & lexer on make
	maintainerclean rather than on distclean. Use nobase_hi_DATA rather
	than nobase_hi_SCRIPTS so that the .hi files do not get installed with
	+x execute permissions. Include gtk2hs.haddock in the files that get
	cleaned and make sure all the haddock index files get cleaned. Install
	the gtk2hs.haddock file into the same dir as the html docs rather than
	the directory below, by default.

2005-06-21 Duncan Coutts <duncan@coutts.uklinux.net>

	* AUTHORS: note that Axel is author and developer and that Duncan is
	current maintainer. Apparently this better reflects reality.

	* demo/fastdraw/FastDraw.hs: change fastdraw demo to add more
	comments and make it compile with -O by default (which makes a large
	difference). Use a faster looping construct and add a comment
	mentioning that GHC is better at optimising the doFromTo kind of loop
	than the "sequence_ [ ... | x <- ... ]" kind of loop.

2005-06-20 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Entry/EntryCompletion.chs.pp: change the return
	type of entryCompletionGetEntry back to what it was previously which
	is what it should be. It must have been accidentally changed in a
	over-zelous merge from the generated modules. Found this accidental
	change using new apidiff tool.

	* gtk/Graphics/UI/Gtk/Gdk/Events.hsc: export the Modifier data
	constructors and make it an instance of Eq, but Show is probably not
	necessary.

	* gtk/Graphics/UI/Gtk/Gdk/DrawWindow.chs.pp,
	gtk/Graphics/UI/Gtk/Gdk/Drawable.chs.pp,
	gtk/Graphics/UI/Gtk/Gdk/GC.chs, gtk/Graphics/UI/Gtk/Gdk/Gdk.chs,
	gtk/Graphics/UI/Gtk/Gdk/Keys.chs,
	gtk/Graphics/UI/Gtk/Gdk/Pixbuf.chs.pp,